--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -187,7 +187,7 @@
                             username = code[0].username,
                         });
                     await LocalStorage.SetItemAsStringAsync("token", u[0].token);
-                    Nav.NavigateTo("/product");
+                    Nav.NavigateTo("/products");
                 }
             }
         }
