--- a/Components/Pages/Products.razor
+++ b/Components/Pages/Products.razor
@@ -73,7 +73,7 @@
                     <MudToolBar>
                         <MudSpacer />
                         <MudButton>Clear</MudButton>
-                        <MudButton Variant="Variant.Filled" @onclick="Submit" Color="Color.Tertiary">
+                        <MudButton Variant="Variant.Filled" @onclick="Submit" Color="Color.Primary">
                             Add Product
                         </MudButton>
                     </MudToolBar>
@@ -294,7 +294,6 @@
                 // Handle exception (if needed)
             }
         }
-
     }
 
     private async void loadMore()
