--- a/Components/Pages/UpdateProduct.razor
+++ b/Components/Pages/UpdateProduct.razor
@@ -38,7 +38,7 @@
         </DialogContent>
         <DialogActions>
             <MudButton OnClick="Cancel">Cancel</MudButton>
-            <MudButton Disabled="@_processing" @onclick="Submit" Variant="Variant.Filled" Color="Color.Tertiary">
+            <MudButton Disabled="@_processing" @onclick="Submit" Variant="Variant.Filled" Color="Color.Primary">
                 @if (_processing)
                 {
                     <MudProgressCircular Class="ms-n1" Size="Size.Small" Indeterminate="true" />
@@ -46,7 +46,7 @@
                 }
                 else
                 {
-                    <MudText>Submit</MudText>
+                    <MudText>Apply</MudText>
                 }
             </MudButton>
         </DialogActions>
