--- a/Components/Pages/Dashboard.razor
+++ b/Components/Pages/Dashboard.razor
@@ -51,7 +51,7 @@
                 <div class="col-sm-12 ">
                     <div class="col-sm-10 col-sm-offset-1  text-center">
                         <div class="four_zero_four_bg">
-                            <h1 class="text-center ">UNDER CONSTRUCTION.....</h1>
+                            <h1 class="text-center " style="font-size:50px;">Under Construction.......</h1>
 
 
                         </div>
