--- a/Components/Layout/LoginLayout.razor
+++ b/Components/Layout/LoginLayout.razor
@@ -1,2 +1,11 @@
 ﻿@inherits LayoutComponentBase
 @Body
+
+<MudThemeProvider @rendermode="RenderMode.InteractiveServer" />
+<MudPopoverProvider @rendermode="RenderMode.InteractiveServer" />
+<MudDialogProvider FullWidth="true"
+                   CloseButton="true"
+                   MaxWidth="MaxWidth.ExtraSmall"
+                   Position="DialogPosition.TopCenter"
+                   @rendermode="RenderMode.InteractiveServer" />
+<MudSnackbarProvider @rendermode="RenderMode.InteractiveServer" />
