--- a/Components/Layout/MainLayout.razor.css
+++ b/Components/Layout/MainLayout.razor.css
@@ -9,12 +9,11 @@ main {
 }
 
 .sidebar {
-    /* background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);*/
     background-color: #343A40;
 }
 
 .top-row {
-    background-color: #f7f7f7;
+    background-color: #343A40;
     border-bottom: 1px solid #d6d5d5;
     justify-content: flex-end;
     height: 3.5rem;
