--- a/Components/Layout/LoginLayout.razor
+++ b/Components/Layout/LoginLayout.razor
@@ -1,6 +1,12 @@
 ﻿@inherits LayoutComponentBase
 @Body
 
+<style>
+    body {
+        font-family: monospace;
+    }
+</style>
+
 <MudThemeProvider @rendermode="RenderMode.InteractiveServer" />
 <MudPopoverProvider @rendermode="RenderMode.InteractiveServer" />
 <MudDialogProvider FullWidth="true"
