--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -10,6 +10,10 @@
 <MudSnackbarProvider @rendermode="RenderMode.InteractiveServer" />
 
 <style>
+    body
+    {
+        font-family: monospace;
+    }
     /*Logout icon*/
     .img2 {
         width: 35px;
@@ -94,7 +98,7 @@
             <MudSpacer />
             <div class="navigation">
                 <a class="button" href="">
-                   @*  <img class="img2" src="cashier.png"> *@
+                    <img class="img2" src="cashier.png">
                     <div class="logout" style="color:black">LOGOUT</div>
                 </a>
             </div>
