--- a/Components/App.razor
+++ b/Components/App.razor
@@ -21,6 +21,8 @@
     <script src="_framework/blazor.web.js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
     <script src="shortcut.js"></script>
+    <script src="enterShortcut.js"></script>
+    <script src="escShortcut.js"></script>
 
 </body>
 
