--- a/Components/Pages/Print.razor
+++ b/Components/Pages/Print.razor
@@ -3,6 +3,9 @@
 @inject JSPrintManager JSPrintManager
 @inject IJSRuntime JS
 @inject NavigationManager Nav
+@inject ILocalStorageService Loc
+@inject ISnackbar SnackBar
+@using System.Net.Http.Headers
 
 <MudDialog TitleClass="mud-primary" DisableSidePadding="true">
     <TitleContent>
@@ -50,31 +53,28 @@
 @code {
     [CascadingParameter]
     private MudDialogInstance MudDialog { get; set; }
-    public temp[]? t;
+    private temp[]? _t;
     private bool _processing = false;
-    public double _total { get; set; } = 100;  // Example total bill amount
+    public double _total { get; set; } = 0;
     public double _amount { get; set; } = 0;
     public double _change { get; set; } = 0;
 
-    // Method that updates the change when the amount changes
     private void OnAmountChanged(double value)
     {
         _amount = value;
 
-        // Update the change if amount is greater than 0
         if (_amount > 0)
         {
             _change = _amount - _total;
         }
         else
         {
-            _change = 0; // If amount is 0, change should be 0
+            _change = 0;
         }
 
-        // You can also add additional validation to ensure negative change doesn't happen
         if (_change < 0)
         {
-            _change = 0; // Prevent negative change
+            _change = 0;
         }
     }
 
@@ -92,10 +92,49 @@
             }
         }
     }
+    private async Task TempToPurchase()
+        {
+        try
+        {
+            using (HttpClient client = new HttpClient())
+            {
+                client.BaseAddress = new Uri($"{Nav.BaseUri}");
+
+                // Make sure the token is retrieved
+                client.DefaultRequestHeaders.Authorization =
+                    new AuthenticationHeaderValue("Bearer", await Loc.GetItemAsStringAsync("token"));
+
+                // Send the request to trigger the stored procedure
+                HttpResponseMessage response = await client.PostAsync("api/Temp/TempToPurchase", null); // No body needed
+
+                if (response.IsSuccessStatusCode)
+                {
+                    string responseContent = await response.Content.ReadAsStringAsync();
+                    int i = JsonConvert.DeserializeObject<int>(responseContent);
+
+                    if (i > 0)
+                    {
+                        DoPrint();
+                        MudDialog.Close();
+                        StateHasChanged();
+                    }
+                }
+                else
+                {
+                    SnackBar.Add($"Warning: {response.ReasonPhrase}", Severity.Warning);
+                    StateHasChanged();
+                }
+            }
+        }
+        catch (Exception ex)
+        {
+            // Handle exception
+        }
+    }
 
     private async Task Submit()
     {
-    //
+        TempToPurchase();
     }
 
     private async Task Cancel()
@@ -117,7 +156,7 @@
     [JSInvokable]
     public void ExecuteShortcut()
     {
-        DoPrint();
+        TempToPurchase();
     }
 
     [JSInvokable]
@@ -141,7 +180,7 @@
     private bool UseDefaultPrinter = true;
 
     // Printing...
-    private temp[]? _t;
+
     private async Task LoadTemp()
     {
         try
@@ -210,7 +249,6 @@
 
             // Send print job
             JSPrintManager.SendClientPrintJob(cpj);
-            MudDialog.Close();
         }
     }
 
