--- a/Components/Pages/Print.razor
+++ b/Components/Pages/Print.razor
@@ -9,7 +9,7 @@
 
 <MudDialog TitleClass="mud-primary" DisableSidePadding="true">
     <TitleContent>
-        <MudText Typo="Typo.h6" Style="color:white; text-align: center; font-weight: bold;">
+        <MudText Typo="Typo.h6" Style="color:white; font-weight: bold;">
             Billing
         </MudText>
     </TitleContent>
