--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -94,7 +94,7 @@
         </div> *@
         <MudToolBar Style="border-bottom:solid gray 0.5px;" class="top-row px-4">
             <MudIconButton Icon="@Icons.Material.Outlined.Menu" Color="Color.Inherit" Class="mr-5" />
-            <MudText Align="Align.Left"><b>POS</b></MudText>
+            <MudText Align="Align.Left"><b>DURIAN GARDEN (POS)</b></MudText>
             <MudSpacer />
             <div class="navigation">
                 <a class="button" href="">
