--- a/Components/Pages/Counter.razor
+++ b/Components/Pages/Counter.razor
@@ -223,7 +223,7 @@
 
 <MudToolBar Style="border-bottom:solid gray 0.5px;">
     <MudIconButton Icon="@Icons.Material.Outlined.Menu" Color="Color.Inherit" Class="mr-5" />
-    <MudText Align="Align.Left"><b>POS</b></MudText>
+    <MudText Align="Align.Left"><b>DURIAN GARDEN (POS)</b></MudText>
     <MudSpacer />
     <div class="navigation">
         <a class="button" href="">
